[metadata]
name = uparma
description = tba
long_description = tba
author = tba
author_email = christian@fufezan.net
url = https://github.com/uparma
license = tba
classifier = 
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Education
     Intended Audience :: Science/Research
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
     Operating System :: POSIX :: SunOS/Solaris
     Operating System :: Unix
     Programming Language :: Python :: 3.5
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Chemistry
     Topic :: Scientific/Engineering :: Medical Science Apps

[options]
packages = find_namespace:
install_requires =
    pytest==6.2.2
    requests==2.25.1

[options.package_data]
uparama = *.json

[egg_info]
egg_base = .
