[metadata]
name = uparma
description = tba
long_description = tba
author = tba
author_email = christian@fufezan.net
url = https://github.com/uparma
license = tba
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find_namespace:
install_requires =
    pytest~=7.0
    requests~=2.0

[options.package_data]
uparma = *.txt, *.json

[egg_info]
egg_base = .
